--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   ci:
-    runs-on: ["ubuntu-latest", "self-hosted"]
+    runs-on: ubuntu-latest
     steps:
       - name: echo
         run : |
