--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,13 @@
 name: ci
 
 on:
+  workflow_dispatch:
+    inputs:
+      BRANCH:
+        description: 'Branch to run '
+        required: true
+        default: 'master'
+        type: choice
   pull_request:
     branches:
       - main
@@ -15,3 +22,4 @@ jobs:
       - name: echo
         run : |
           source ci.sh
+          echo ${{ inputs.BRANCH }}
