--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,4 +33,4 @@ jobs:
           echo "test" >> test.txt
           git add .
           git commit -m "add test file"
-          git push set-url origin ssh://git@github.com:faridmasjedi/workflow.git
+          git push
