--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,3 +35,15 @@ jobs:
           git commit -m "add test file"
           git push origin HEAD:test2
           echo "test"
+      
+      - name: new commit on other branch
+        run: |
+          git config --global user.name "github bot"
+          git config --global user.email "githubbot@github.com"
+          git checkout HEAD:test1
+          touch test.txt
+          echo "test" >> test.txt
+          git add .
+          git commit -m "add test file"
+          git push origin HEAD:test1
+          echo "test"
